# rubbrband

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  environment.yaml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: build.yaml  pre-commit.yaml
docs/: mint.json
docs/cli-docs/getting-started/: introduction.mdx  quickstart-guide.mdx
docs/cli-docs/models/: controlnet.mdx  dreambooth.mdx  lora.mdx  stable-diffusion-web-ui.mdx
docs/cli-docs/reference/: common-problems.mdx  github.mdx  installation.mdx
docs/cli-docs/supported-compute-platforms/: aws.mdx  lambda-labs-recommended.mdx  tested-platforms.mdx
docs/cli-docs/use-cases/: generate-animated-video.mdx  generating-specific-persons-face.mdx
rubbrband/: __init__.py  main.py  rubbrband.py  version.py
rubbrband.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
rubbrband/clients/: docker_client.py
rubbrband/controllers/: eval.py  train.py  web.py
rubbrband/controllers/models/base/: Dockerfile
rubbrband/controllers/models/control/: Dockerfile  eval.py  infer.sh  train.py  train.sh
rubbrband/controllers/models/dreambooth/: Dockerfile  eval.py  infer.sh  train.py  train.sh
rubbrband/controllers/models/lora/: Dockerfile  eval.py  infer.sh  train.sh
rubbrband/controllers/models/nanoGPT/: Dockerfile
rubbrband/controllers/models/sd-webui/: Dockerfile  web.py  web.sh
rubbrband/controllers/models/sd_webui/: Dockerfile  web.py  web.sh
rubbrband/legacy/: main.py  version.py
rubbrband/legacy/controllers/: web.py
(+9 files in other folders)
