[metadata]
name = rubbrband
version = 0.1.47
home-page = https://github.com/rubbrband/rubbrband
documentation = https://rubbrband.gitbook.io/cli-docs/

[options]
packages = rubbrband
install_requires =
    yaspin
    docker>=6.0.0
    typer>=0.7.0
    rich
    GPUtil


[options.entry_points]
console_scripts =
    rubbrband = rubbrband.main:app
